# Job-search-telegram-bot

./: .gitignore  Dockerfile  README  docker-compose.yaml  pyproject.toml
src/: .env.example  __init__.py  main.py  prestart.sh
src/alembic/: env.py
src/alembic/versions/: 4e8c522bbd71_create_all_tables.py
src/bot/: app.py  states.py
src/bot/handlers/: __init__.py  common.py  profile.py  saved.py  search.py  start.py
src/bot/keyboards/: inline.py
src/bot/middlewares/: throttling.py
src/core/: config.py  container.py  exceptions.py  logging.py
src/db/models/: __init__.py  base.py  search_query.py  user.py  vacancy.py
src/db/repositories/: search_repo.py  user_repo.py  vacancy_repo.py
src/schemas/: user.py  vacancy.py
src/services/ai/: client.py  profile_parser.py  prompts.py
src/services/matching/: scorer.py
src/services/sources/: aggregator.py  base.py  remotive.py
src/utils/: formatting.py
tests/: conftest.py
tests/integration/: test_user_repo.py  test_vacancy_repo.py
tests/unit/: test_formatting.py  test_remotive.py  test_schemas.py  test_scorer.py
