[project]
name = "job-search"
version = "0.1.0"
description = "Telegram bot for AI-assisted job search"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.7,<23.0)",
    "sqlalchemy[asyncio] (>=2.0,<3.0)",
    "pydantic (>=2.0,<3.0)",
    "pydantic-settings (>=2.0,<3.0)",
    "alembic (>=1.14,<2.0)",
    "aiosqlite (>=0.20,<1.0)",
    "asyncpg (>=0.29,<1.0)",
    "httpx (>=0.28,<1.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0,<9.0)",
    "pytest-asyncio (>=0.25,<1.0)",
    "ruff (>=0.9,<1.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
